<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">功过格(了凡四训)</string>
    <string name="date_to">至</string>
    <string name="chart">报表</string>
    <string name="title_activity_main">功过格(了凡四训)</string>
    <string name="date_range">时间范围</string>
    <string name="homepage_background_setting">首页图片设置</string>
    <string name="takephoto">拍照</string>
    <string name="camera">相册</string>
    <string name="defaultpic">恢复默认</string>
    <string name="read_lfsx">阅读了凡四训(推荐用云中书城或QQ阅读)</string>
    <string name="read_lfsxbhw">阅读了凡四训白话文</string>
    <string name="font_color_select">字体颜色选择</string>
    <string name="save_ok">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="set_password">设置密码</string>
    <string name="login_password">请输入登录密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_passwordtwo">请再次输入密码</string>
    <string name="input_password_empty">请输入完整且相同的两个密码！</string>
    <string name="login_password_error">请输入正确的登录密码！</string>
    <string name="set_password_ok">设置密码成功！</string>
    <string name="times">次</string>
    <string name="month_gong">本月功</string>
    <string name="month_guo">本月过</string>
    <string name="month_total">本月合计</string>
    <string name="record_gong">记功</string>
    <string name="record_guo">记过</string>
    <string name="record_detail">明细</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="importstr">导入自定义功过</string>
    <string name="exportstr">导出自定义功过</string>
    <string name="gong">功</string>
    <string name="guo">过</string>
    <string name="total">合计</string>
    <string name="title_activity_gong">GongActivity</string>
    <string name="title_activity_more">更多</string>
    <string-array name="GONG_STR">
        <item>准百功</item>
        <item>准五十功</item>
        <item>准三十功</item>
        <item>准十功</item>
        <item>准五功</item>
        <item>准三功</item>
        <item>准一功</item>
    </string-array>
    <string-array name="GONG_VALUES">
        <item>100</item>
        <item>50</item>
        <item>30</item>
        <item>10</item>
        <item>5</item>
        <item>3</item>
        <item>1</item>
    </string-array>
    <string-array name="GONG_DETAIL">

        
        <item>救免一人死,完一妇女节,阻人不溺一子女,为人延一嗣</item>
        
        <item>免堕一胎,当欲染境 守正不染,收养一无倚,葬一无主骸骨,救免一人流离,救免一人军徒重罪,白一人冤,发一言利及百姓</item>
        
        <item>施一葬地与无土之家,化一为非者改行,度一受戒弟子,完聚一人夫妇,收养一无主遗弃门孩,成就一人德业</item>
        
        <item>荐引一有德人,除一人害,编纂一切众经法,以方术治一人重病,发至德之言,有财势可使而不使,善遗妾婢,救一有力报人之畜命</item>
        
        <item>劝息一人讼,传人一保益性命事,编纂一保益性命经法,以方术救一人轻疾,劝止传播人恶,供养一贤善人,祈福禳灾等 但许善愿不杀生,救一无力报人之畜命</item>
        
        <item>受一横不嗔,任一谤不辩,受一逆耳言,免一应责人,劝养蚕、渔人、猎人、屠人等改业,葬一自死畜类</item>
        
        <item>赞一人善,掩一人恶,劝息一人争,阻人一非为事,济一人饥,留无归人一宿,救一人寒,施药一服,施行劝济人书文,诵经一卷,礼忏百拜,诵佛号千声,讲演善法 谕及十人,兴事利及十人,拾得遗字一千,饭一僧,护持僧众一人,不拒乞人,接济人畜一时疲顿,见人有忧 善为解慰,肉食人持斋一日,见杀不食 闻杀不食 为己杀不食,葬一自死禽类,放一生,救一细微湿化之属命,作功果荐沉魂,散钱粟衣帛济人,饶人债负,还人遗物,不义之财不取,代人完纳债负,让地让产,劝人出财作种种功德,不负寄托财物,建仓平粜、修造路桥、疏河掘井,修置三宝寺院、造三宝尊像及施香烛灯油等物,施茶水、舍棺木一切方便等事,捐百钱</item>
    </string-array>
    <string-array name="GUO_STR">
        <item>准百过</item>
        <item>准五十过</item>
        <item>准三十过</item>
        <item>准十过</item>
        <item>准五过</item>
        <item>准三过</item>
        <item>准一过</item>
    </string-array>
    <string-array name="GUO_VALUES">
        <item>-100</item>
        <item>-50</item>
        <item>-30</item>
        <item>-10</item>
        <item>-5</item>
        <item>-3</item>
        <item>-1</item>
    </string-array>
    <string-array name="GUO_DETAIL">

        
        <item>致一人死,失一妇女节,赞人溺一子女,绝一人嗣</item>
        
        <item>堕一胎,破一人婚,抛一人骸,谋人妻女,致一人流离,致一人军徒重罪,教人不忠不孝大恶等事,发一言害及百姓</item>
        
        <item>造谤污陷一人,摘发一人阴私与行止事,唆一人讼,毁一人戒行,反背师长,抵触父兄,离间人骨肉,荒年积囤五谷不粜生索</item>
        
        <item>排摈一有德人,荐用一匪人,平人一冢,凌孤逼寡,受畜一失节妇,畜一杀众生具,恶语向尊亲、师长、良儒,修合害人毒药,非法用刑,毁坏一切正法经典,诵经时，心中杂想恶事,以外道邪法授人,发损德之言,杀一有力报人之畜命 </item>
        
        <item>讪谤一切正法经典,见一冤可白不白,遇一病求救不救,阻绝一道路桥梁,编纂一伤化词传,造一浑名歌谣,恶口犯平交,杀一无力报人之畜命,非法烹炮生物 使受极苦</item>
        
        <item>嗔一逆耳言,乖一尊卑次,责一不应责人 播一人恶,两舌离间一人,欺诳一无识,毁人成功,见人有忧 心生畅快,见人失利 失名 心生欢喜,见人富贵 愿他贫贱,失意辄怨天尤人,分外营求</item>
        
        <item>没一人善,唆一人斗,心中暗举恶意害人,助人为非一事,见人盗细物不阻,见人忧惊不慰,役人畜 不怜疲顿,不告人取人一针一草,遗弃字纸,暴弃五谷天物,负一约,醉犯一人,见一人饥寒不救济,诵经差漏一字句,僧人乞食不与,拒一乞人,食酒肉五辛，诵经登三宝地,服一非法服,食一报人之畜等肉,杀一细微湿化属命以及履巢破卵等事,背众受利 伤用他钱,负贷,负遗,负寄托财物,因公恃势乞索 巧索 取人一切财物,废坏三宝尊像以及殿宇 器用等物,斗秤等小出大入,贩卖屠刀 渔网等物</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_detail">明细</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="tian">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="deleteok">删除成功</string>
    <string name="deletefail">删除失败</string>
    <string name="addok">添加成功</string>
    <string name="title_activity_about">关于</string>
    <string name="widget1_name">功过格(4x1缩放)</string>
    <string name="widget_name">功过格(4x2缩放)</string>
    <string name="about_title">关于功过格（了凡四训）</string>
    <string name="contact_address">Email: gongguoge@126.com \nQQ群: 138512516\n网站: http://www.hnhzg.com</string>
    <string name="about">  \n功过格应用在不断完善中，请点击  我要提建议 按钮提出您宝贵的建议，以帮助提高程序的可用性。</string>
    <string name="about_author"> 作者：聖剛</string>
    <string name="about_version"> 版本：</string>
    <string name="help">\n  使用技巧：\n  首页提示文字切换：\n点击文字
\n\n  首页文字颜色更换：\n首页文字处长按弹出颜色选择菜单
\n\n  首页背景图片更换：\n首页空白处长按弹出设置功能
\n\n  记功/记过：\n方式1 ：点击“记功/记过”列表的具体功过项可进行记录  \n方式2：在明细界面点击相应项，也可快速添加。
\n\n  记功/记过日期和项目修改：\n在弹出的“请确认是否添加”对话框，可修改次数和日期及备注：如 2014年1月28日  08时08分 点击日期的部分会显示修改日期的界面，点击时间部分，会显示修改时间的界面。
\n\n  明细页面：\n点击页面顶端的日期，可以选择日期范围。长按明细项，可弹出明细编辑和删除菜单。
\n\n  自定义功/过：
\n方式1：在“记功/记过”列表页面，长按“准一功”等，可添加自定义功/过。 可长按具体过功项，对其进行编辑，删除。
\n方式2：在“更多”-> “自定义功/自定义过”进行自定义功过设置。
\n\n  导出自定义功过功能：\n点击“导出自定义功过”，在SD卡的ggg目录 下，复制ggg.csv到电脑，可以自己使用文本工具，或Excel进行批量编辑，导入，导出。
\n\n  图表分析功能：\n在“明细”页面，可点击右下角三个图标，进行三种不同形式的图表分析。\n</string>
    <string name="more_str">更多</string>
	<string name="abount_str">关于</string>
	<string name="userdefine_gong">自定义功</string>
	<string name="userdefine_guo">自定义过</string>
	<string name="feedback">我要提建议</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="edit">编辑</string>
	<string name="add">添加</string>
    <string name="added">已添加</string>
	<string name="delete">删除</string>
	<string name="input_empty">请在输入框中添加自定义功过名称</string>
	<string name="add_ok">添加成功</string>
	<string name="edit_ok">修改成功</string>
	<string name="add_exists">已存在相同功过项，请重新输入，谢谢。</string>
	<string name="delete_ok">删除成功</string>
	<string name="delete_fail">删除失败，请稍候重试</string>
	<string name="user_define">自定义</string>
	<string name="empty_user_detaillist">您还没有相关明细记录，请先添加。</string>
    <string name="empty_user_detaillist_gong">您还没有"功"的明细记录，请先添加。</string>
    <string name="empty_user_detaillist_guo">您还没有"过"的明细记录，请先添加。</string>
	<string name="exportok">导出成功</string>
	<string name="exportfail">导出失败</string>
	<string name="importok">导入成功</string>
	<string name="backupok">备份成功</string>
	<string name="backupfail">备份失败</string>
	<string name="backupfail_info">请检查SD卡是否有足够空间，备份位置：\n </string>
	<string name="restoreok">恢复成功</string>
	<string name="restorefail">恢复失败</string>
	<string name="restorefail_info">请放心，已将数据还原，请稍后再重试恢复。</string>
	<string name="restorefail_backupextfail">恢复失败,请检查是否有足够的存储空间</string>
	<string name="importfail">导入失败,请检查是否有足够的存储空间</string>
	<string name="backupfile_exists">备份文件已存在，请确认是否覆盖?</string>
	<string name="restoreconfirm">请确认是否恢复?</string>
	<string name="importconfirm">请确认是否导入?</string>
	<string name="restorefile_not_exist">请确认是否有备份文件位于位置: \n</string>
	<string name="importfile_not_exist">请确认是否有导入文件位于位置: \n</string>
	<string name="backupfile_path_info">备份文件位于: \n</string>
	<string name="exportfile_path_info">导出文件位于: \n</string>
	<string name="importfile_path_info">导入文件位于: \n</string>
	<string name="settings">设置</string>
	<string name="gonggongadd_confirm">请确认是否添加</string>
	<string name="gonggongmodify_confirm">编辑并确认</string>
    <string name="calendar_title_gong">功 统计</string>
    <string name="calendar_title_guo">过 统计</string>
    <string name="calendar_title_all">功过合并 统计</string>
    <string name="calendar">日历</string>
    <string name="addhotgongguo">添加首页快捷键</string>
    <string name="hotgong">首页快捷键功</string>
    <string name="hotguo">首页快捷键过</string>
    <string name="exists_hot">已存在相同快捷键</string>
    <string name="hotgongguo">首页快捷键</string>
    <string name="top">置顶</string>
    <string name="top_ok">置顶成功</string>
</resources>