<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222222">
    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    	
        <LinearLayout
            android:orientation="vertical"
             android:id="@+id/layoutbuttons"
             android:layout_width="fill_parent"
    		android:layout_height="wrap_content">
    		
             <Button
        android:id="@+id/buttonReadLFSX"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/gray_btn"
        android:gravity="center_horizontal"
        android:text="@string/read_lfsx"
        android:textSize="20sp" />
             
             <Button
        android:id="@+id/buttonReadLFSXBHW"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/gray_btn"
        android:gravity="center_horizontal"
        android:text="@string/read_lfsxbhw"
        android:textSize="20sp" />
             
            <Button
        android:id="@+id/buttonUserDefineGong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/gray_btn"
        android:gravity="center_horizontal"
        android:text="@string/userdefine_gong"
        android:textSize="20sp" />
        
        <Button
        android:id="@+id/buttonUserDefineGuo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/gray_btn"
        android:gravity="center_horizontal"
        android:text="@string/userdefine_guo"
        android:textSize="20sp" />

        
        
        <Button
            android:id="@+id/buttonExport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonRestore"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_btn"
            android:gravity="center_horizontal"
            android:text="@string/exportstr"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonExport"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_btn"
            android:gravity="center_horizontal"
            android:text="@string/importstr"
            android:textSize="20sp" />
	<Button
            android:id="@+id/buttonBackup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_btn"
            android:gravity="center_horizontal"
            android:text="@string/backup"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonRestore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_btn"
            android:gravity="center_horizontal"
            android:text="@string/restore"
            android:textSize="20sp" />
    <Button
        android:id="@+id/buttonfeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_btn"
        android:gravity="center_horizontal"
        android:text="@string/feedback"
        android:textSize="20sp" />
	
    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRight"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_btn"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textSize="20sp" />
            
        </LinearLayout>\n    Email: gongguoge@126.com \n    QQ群: 138512516\n



      <TextView
          android:id="@+id/TextViewGuoTitle"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/layoutbuttons"
          android:gravity="center_horizontal"
          android:text="@string/about_author"
          android:textSize="20sp" />
        <TextView
            android:id="@+id/TextViewTotalTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextViewGuoTitle"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/about_version"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextViewTotalTitle"
            android:autoLink="all"
            android:text="@string/contact_address"
            android:textSize="20sp"
            android:layout_marginLeft="2dp" />


	<TextView
          android:id="@+id/textViewHelp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textViewContact"
          android:text="@string/help"
          android:textSize="18sp" />
      <TextView
          android:id="@+id/textViewGongTitle"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textViewHelp"
          android:autoLink="all"
          android:text="@string/about"
          android:textSize="20sp" />

      <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_below="@+id/textViewGongTitle"
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:background="#88333333" >

        <Button
            android:id="@+id/button1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/back_btn"
            android:onClick="backClick" />
    </RelativeLayout>
	</RelativeLayout>
</ScrollView>