<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/b" >

    <RelativeLayout
        android:id="@+id/layoutContent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="false"
        android:layout_marginBottom="10dp" >
        <!-- android:textColor="#777777" -->
        <TextView
            android:id="@+id/textViewTips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="12dp"
            android:layout_toLeftOf="@+id/layoutgongguo"
            android:text="Medium Text"
            android:textColor="#FF777777"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/layoutgongguo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gongTitleLayout"
                android:layout_centerHorizontal="true"
                android:onClick="gongTitleClick">

                <TextView
                android:id="@+id/textViewGongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/gong"
                android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />

                <TextView
            android:id="@+id/textMonthGong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewGongTitle"
            android:layout_centerHorizontal="true"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guoTitleLayout"
                android:layout_below="@+id/gongTitleLayout"
                android:layout_centerHorizontal="true"
                android:onClick="guoTitleClick">

                <TextView
            android:id="@+id/TextViewGuoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewGongTitle"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/textMonthGong"
            android:layout_centerHorizontal="true"
            android:text="@string/guo"
            android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />

                <TextView
            android:id="@+id/textMonthGuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextViewGuoTitle"
            android:layout_centerHorizontal="true"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/guoTitleLayout"
                android:onClick="totalTitleClick">

                <TextView
            android:id="@+id/TextViewTotalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guoTitleLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textMonthTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextViewTotalTitle"
                    android:layout_centerHorizontal="true"
                    android:gravity="right"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_centerVertical="false"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/buttonGong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/gray_btn"
            android:text="@string/record_gong" />

        <Button
            android:id="@+id/buttonGuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/gray_btn"
            android:text="@string/record_guo" />
        <Button
            android:id="@+id/buttonCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/gray_btn"
            android:text="@string/calendar" />
        <Button
            android:id="@+id/buttonDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/gray_btn"
            android:text="@string/record_detail" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/gray_btn"
            android:text="@string/more_str" />

    </LinearLayout>

    

</RelativeLayout>
