<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/gong"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textViewGong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:text="@string/guo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textViewGuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3"
            android:layout_toRightOf="@+id/linearLayout2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:text="@string/total"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="New Button"
            android:id="@+id/imageButton"
            android:background="@drawable/increase_p"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="false"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/linearLayout3"
            android:layout_marginLeft="3dp" />
    </RelativeLayout>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridView"
        android:numColumns="3"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:listSelector="@drawable/grid_item_selector"
        android:layout_marginTop="3dp"
        android:layout_alignParentBottom="true"
        android:stackFromBottom="false"
        android:layout_below="@+id/relativeLayout" />
</RelativeLayout>